--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@
 labels.sex.MALE=männlich
 labels.sex.FEMALE=weiblich
 labels.sex.OTHER=divers
+labels.sex.null=möchte ich für mich behalten
 
 # labels for RelationshipStatus Enum
 labels.relationshipStatus.SINGLE=single
@@ -10,4 +11,5 @@ labels.relationshipStatus.IN_A_RELATIONSHIP=in einer Beziehung
 labels.relationshipStatus.MARRIED=verheiratet
 labels.relationshipStatus.DIVORCED=geschieden
 labels.relationshipStatus.ITS_COMPLICATED=es ist kompliziert
+labels.relationshipStatus.null=möchte ich für mich behalten
 
