refactoring enums, labels

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@
 labels.sex.MALE=männlich
 labels.sex.FEMALE=weiblich
 labels.sex.OTHER=divers
+labels.sex.NOT_SPECIFIED=möchte ich für mich behalten
 labels.sex.null=möchte ich für mich behalten
 
 # labels for RelationshipStatus Enum
@@ -11,5 +12,12 @@ labels.relationshipStatus.IN_A_RELATIONSHIP=in einer Beziehung
 labels.relationshipStatus.MARRIED=verheiratet
 labels.relationshipStatus.DIVORCED=geschieden
 labels.relationshipStatus.ITS_COMPLICATED=es ist kompliziert
+labels.relationshipStatus.NOT_SPECIFIED=möchte ich für mich behalten
 labels.relationshipStatus.null=möchte ich für mich behalten
 
+# labels for OnlineStatus Enum
+labels.onlineStatus.ONLINE=online
+labels.onlineStatus.AWAY=abwesend
+labels.onlineStatus.BUSY=beschäftigt
+labels.onlineStatus.INVISIBLE=offline
+labels.onlineStatus.null=
